--- a/app/src/main/res/layout/notifications_fragment_notification.xml
+++ b/app/src/main/res/layout/notifications_fragment_notification.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!-- Fragment to show notifications -->
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,13 +7,19 @@
     android:orientation="vertical"
     >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:gravity="center"
+        android:paddingTop="20dp"
+        android:orientation="horizontal">
 
 
-
-
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/notification_no_notifications_found"
+        android:id="@+id/lblNotAssistanceFound"
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical|center_horizontal"
@@ -24,31 +30,18 @@
         android:text="@string/empty_notifications_message"
         android:fontFamily="@font/opensans_light"
         android:textColor="@color/black100"
-        android:textSize="15sp"
-        android:visibility="invisible"
-        />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/notification_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:textSize="15dp"/>
 
-        <include layout="@layout/notifications_card_view"/>
-
-    </android.support.v7.widget.RecyclerView>
-  <!--  <ListView
+    <ListView
+        android:paddingTop="20dp"
+        android:id="@+id/lvAssistance"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        >
-
-
-
-
-    </ListView>-->
+        android:divider="@drawable/listview_divider"
+        android:dividerHeight="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </LinearLayout>
