--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_header_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -24,12 +25,14 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="20dp"
-        android:textColor="@color/black100"/>
+        android:textColor="@color/black100"
+        tools:text="App Tec S.A."/>
 
     <TextView
         android:id="@+id/user_fullname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black100" />
+        android:textColor="@color/black100"
+        tools:text="Mario Piedrita"/>
 
 </LinearLayout>
