--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:background="@drawable/login_background"
-    tools:context=".view.LoginActivity">
+    tools:context=".LoginActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
