--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,9 +8,9 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.appTec.RegistrateApp.view.activities.bottomNavigationUi.home.HomeFragment"
+        android:name="com.appTec.RegistrateApp.view.fragments.home2.HomeFragment2"
         android:label="@string/home_fragment_title"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home2" >
         <action
             android:id="@+id/action_navigation_home_to_navigation_notifications"
             app:destination="@id/navigation_notifications" />
@@ -18,7 +18,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.appTec.RegistrateApp.view.activities.bottomNavigationUi.permission.PermissionFragment"
+        android:name="com.appTec.RegistrateApp.view.fragments.permission.PermissionFragment"
         android:label="@string/notifications_fragment_title"
         tools:layout="@layout/fragment_notification" >
         <action
@@ -28,7 +28,7 @@
 
     <fragment
         android:id="@+id/navigation_permission"
-        android:name="com.appTec.RegistrateApp.view.activities.bottomNavigationUi.permission.PermissionFragment"
+        android:name="com.appTec.RegistrateApp.view.fragments.permission.PermissionFragment"
         android:label="Permisos"
         tools:layout="@layout/fragment_permission" >
         <action
@@ -38,7 +38,7 @@
 
     <fragment
         android:id="@+id/navigation_device"
-        android:name="com.appTec.RegistrateApp.view.activities.bottomNavigationUi.device.DeviceFragment"
+        android:name="com.appTec.RegistrateApp.view.fragments.device.DeviceFragment"
         android:label="Equipos"
         tools:layout="@layout/fragment_device" />
 </navigation>
