--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,9 +8,9 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.appTec.RegistrateApp.view.fragments.home2.HomeFragment2"
+        android:name="com.appTec.RegistrateApp.view.fragments.home.HomeFragment"
         android:label="@string/home_fragment_title"
-        tools:layout="@layout/fragment_home2" >
+        tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_navigation_home_to_navigation_notifications"
             app:destination="@id/navigation_notifications" />
