--- a/app/src/main/res/layout/app_bar_main_2.xml
+++ b/app/src/main/res/layout/app_bar_main_2.xml
@@ -6,17 +6,17 @@
     android:background="@color/colorPrimary">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/tbFragmentToolbar"
+        android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">tb
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/lblToolbarName"
+                android:id="@+id/toolbar_name2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -26,7 +26,7 @@
                 android:textSize="20sp" />
 
             <ImageButton
-                android:id="@+id/leftRight"
+                android:id="@+id/image_button_side_menu2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
