--- a/app/src/main/res/layout/activity_main_2.xml
+++ b/app/src/main/res/layout/activity_main_2.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <FrameLayout
+            <fragment
                 android:id="@+id/nav_host_fragment_2"
                 android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
