--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login_background"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@drawable/login_background"
     tools:context=".LoginActivity">
 
     <LinearLayout
@@ -34,10 +34,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="350dp"
-        android:background="@drawable/border_corner"
-        android:orientation="vertical"
         android:layout_alignParentBottom="true"
-        >
+        android:background="@drawable/border_corner"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="fill_parent"
