--- a/app/src/main/res/layout/app_bar_main_2.xml
+++ b/app/src/main/res/layout/app_bar_main_2.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:fitsSystemWindows="true"--><!--tools:context=".activities.NavigationActivity">-->
-
+<?xml version="1.0" encoding="utf-8"?>
+<!-- This is not used -->
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,9 +20,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:fontFamily="@font/nunito_bold"
                 android:text=""
                 android:textColor="@android:color/white"
-                android:fontFamily="@font/nunito_bold"
                 android:textSize="20sp" />
 
             <ImageButton
