--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,14 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/homeFragment"
-    >
+    app:startDestination="@id/homeFragment">
 
 
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.apptec.registrateapp.view.fragments.home.HomeFragment"
-        android:label="HomeFragment" >
+        android:label="HomeFragment">
         <action
             android:id="@+id/action_homeFragment_to_notificationsFragment"
             app:destination="@id/notificationsFragment" />
@@ -18,7 +17,7 @@
     <fragment
         android:id="@+id/notificationsFragment"
         android:name="com.apptec.registrateapp.view.fragments.notifications.NotificationsFragment"
-        android:label="NotificationsFragment" >
+        android:label="NotificationsFragment">
         <action
             android:id="@+id/action_notificationsFragment_to_permissionFragment"
             app:destination="@id/permissionFragment" />
@@ -26,7 +25,7 @@
     <fragment
         android:id="@+id/permissionFragment"
         android:name="com.apptec.registrateapp.view.fragments.permission.PermissionFragment"
-        android:label="PermissionFragment" >
+        android:label="PermissionFragment">
         <action
             android:id="@+id/action_permissionFragment_to_dialogDevice"
             app:destination="@id/deviceFragment" />
