--- a/app/src/main/res/layout/device_element.xml
+++ b/app/src/main/res/layout/device_element.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/txtDeviceName"
+        android:id="@+id/edit_text_device_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -37,7 +37,7 @@
             android:textSize="15dp" />
 
         <TextView
-            android:id="@+id/txtDeviceModel"
+            android:id="@+id/edit_text_device_model"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_light"
