--- a/app/src/main/res/layout/dialog_device.xml
+++ b/app/src/main/res/layout/dialog_device.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Agregar Dispositivo"
+        android:text="@string/title_add_device_fragment"
         android:fontFamily="@font/nunito_bold"
         android:textColor="@color/black100"
         android:textSize="20dp"
@@ -16,7 +16,7 @@
         ></TextView>
 
     <EditText
-        android:id="@+id/txtDeviceName"
+        android:id="@+id/edit_text_device_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="Nombre del equipo"
@@ -24,7 +24,7 @@
         android:layout_marginRight="35dp"></EditText>
 
     <EditText
-        android:id="@+id/txtDeviceModel"
+        android:id="@+id/edit_text_device_model"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="Modelo"
